--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
 <script src="assets/js/main.min.js"></script>
 -->
-<!-- Scripts locais -->
+<!-- Scripts locais
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.poptrox.js"></script>
 <script src="assets/js/skel.min.js"></script>
@@ -16,4 +16,6 @@
 <script src="assets/js/exif.js"></script>
 <!--[if lte IE 8]>
 <script src="assets/js/ie/respond.min.js"></script><![endif]-->
-<script src="assets/js/main.min.js"></script>
+<!--<script src="assets/js/main.min.js"></script> -->
+<!-- Scripts minificados -->
+<script src="assets/js/js_minificado.js"></script>
