--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,8 +6,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.3.0/exif.min.js"></script>
 <!--[if lte IE 8]>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
-<script src="assets/js/main.min.js"></script>
--->
+<!-- <script src="assets/js/main.min.js"></script>-->
 <!-- Scripts locais
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.poptrox.js"></script>
