--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,14 +7,15 @@
 <!--[if lte IE 8]>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script><![endif]-->
 <!-- <script src="assets/js/main.min.js"></script>-->
-<!-- Scripts locais
+<!-- Scripts locais -->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/jquery.poptrox.js"></script>
 <script src="assets/js/skel.min.js"></script>
 <script src="assets/js/util.js"></script>
 <script src="assets/js/exif.js"></script>
+<script src="assets/js/main.min.js"></script>
 <!--[if lte IE 8]>
 <script src="assets/js/ie/respond.min.js"></script><![endif]-->
-<!--<script src="assets/js/main.min.js"></script> -->
-<!-- Scripts minificados -->
-<script src="assets/js/js_minificado.js"></script>
+
+<!-- Scripts minificados 
+<script src="assets/js/js_minificado.js"></script> -->
